--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -81,3 +81,49 @@ body {
     border-bottom: 0;
   }
 }
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  padding-top: 50px;
+  margin-bottom: 60px;
+}
+
+.panel-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
+.panel-container [class*=col-] {
+  display: flex;
+}
+.panel-container [class*=col-] .panel {
+  /*position: absolute;
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+  top: 15px;
+  left: 15px;*/
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+#brandImage{
+  max-width: 100%;
+}
+
+/* footer styles */
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+.footer p {
+  line-height: 60px;
+  text-align: center;
+  margin: 0;
+}
